Add new examples

--- a/index.html
+++ b/index.html
@@ -1,166 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="Gabi Berbetoros | Composer | Sound Designer" />
-    <meta name="author" content="Fer Alonso MAccari" />
 
-    <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap" rel="stylesheet" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Gabi Berbetoros | Composer | Sound Designer" />
+  <meta name="author" content="Fer Alonso Maccari" />
 
-    <link rel="icon" type="image/png" href="src/ico.png" />
-    <link rel="stylesheet" href="styles/style.css" />
-    <link rel="stylesheet" href="styles/animate.css" />
-    <title>Portfolio | Gabi Berbetoros</title>
-  </head>
-  <body class="body-wrapper">
-    <header>
-      <div class="particles" id="particles-js"></div>
-      <section class="section header__wrapper">
-        <article class="wow fadeInLeft header__title">
-          <h1 class="title__name">Gabi <small class="title__icon"> 👽 </small> Berbetoros</h1>
+  <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap" rel="stylesheet" />
 
-          <h2 class="title__subtitle">Composer | Sound Designer</h2>
-        </article>
-        <nav class="nav header__nav">
-          <a class="nav-link" href="#skills">Skills</a>
-          <a class="nav-link" href="#experience">Experience</a>
-          <a class="nav-link" href="#examples">Examples</a>
-          <a class="nav-link" href="#contact">Contact</a>
-        </nav>
-      </section>
-    </header>
+  <link rel="icon" type="image/png" href="src/ico.png" />
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/animate.css" />
+  <title>Portfolio | Gabi Berbetoros</title>
+</head>
 
-    <main>
-      <section class="wow fadeInRight section cover-letter" id="about">
-        <h2 class="section__title">HELLO!</h2>
-        <article class="cover-letter__article">
-          <div class="cover-letter__desc">
-            <p class="desc">
-              My name is Gabriel Berbetoros. I'm a Creative <b>Music Composer and sound designer</b> for video games and visual effects, proficient in multiple
-              <b>audio production softwares</b>. Specialized in a wide variety of genres, from modern to orchestral music.
-            </p>
-            <p class="class=">
-              If you're interested in my work or have any questions, feel free to contact me.
-            </p>
-            <nav class="nav nav-social">
-              <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer" title="SoundCloud"
-                ><div class="nav-social__icon nav-social__icon-soundcloud"></div
-              ></a>
-              <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer" title="Twitter"
-                ><div class="nav-social__icon nav-social__icon-twitter"></div
-              ></a>
-              <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank" rel="noopener noreferrer" title="Instagram"
-                ><div class="nav-social__icon nav-social__icon-ig"></div
-              ></a>
-              <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank" rel="noopener noreferrer" title="LinkedIn"
-                ><div class="nav-social__icon nav-social__icon-in"></div
-              ></a>
-            </nav>
-          </div>
-          <div class="cover-letter__photo"></div>
-        </article>
-      </section>
+<body class="body-wrapper">
+  <header>
+    <div class="particles" id="particles-js"></div>
+    <section class="section header__wrapper">
+      <article class="wow fadeInLeft header__title">
+        <h1 class="title__name">Gabi <small class="title__icon"> 👽 </small> Berbetoros</h1>
 
-      <section class="wow fadeInRight section skills" id="skills">
-        <h2 class="section__title">Skills</h2>
-        <p class="desc">I work with a variety of instruments, musical softwares and sound design tools</p>
+        <h2 class="title__subtitle">Composer | Sound Designer</h2>
+      </article>
+      <nav class="nav header__nav">
+        <a class="nav-link" href="#skills">Skills</a>
+        <a class="nav-link" href="#experience">Experience</a>
+        <a class="nav-link" href="#examples">Examples</a>
+        <a class="nav-link" href="#contact">Contact</a>
+      </nav>
+    </section>
+  </header>
 
-        <p><b><u>Composition and Production</u>:</b> Soundtracks, Adaptive Music, Animation Videos, Albums and Music Production for bands.</p>
-        <p><b><u>Sound Design</u>:</b> Creating, recording, editing and processing of sound effects and foley.</p>
-        <p><b><u>Audio Hardware</u>:</b> Studio recording with Audio Interfaces/Consoles and Live PA in shows.</p>
-        <p><b><u>Audio Softwares</u>:</b> Pro Tools, Cubase, Ableton, Nuendo, Logic, FL Studio, Reaper.</p>
-        <p><b><u>Software Experience</u>:</b> Unity, Fmod, Sibelius, Musescore.</p>
-        <p><b><u>Additional Software Esperience</u>:</b> Adobe Photoshop, Microsoft Office Suite, VEGAS Pro.</p>
-      </section>
+  <main>
+    <section class="wow fadeInRight section cover-letter" id="about">
+      <h2 class="section__title">HELLO!</h2>
+      <article class="cover-letter__article">
+        <div class="cover-letter__desc">
+          <p class="desc">
+            My name is Gabriel Berbetoros. I'm a Creative <b>Music Composer and sound designer</b> for video games and
+            visual effects, proficient in multiple
+            <b>audio production softwares</b>. Specialized in a wide variety of genres, from modern to orchestral music.
+          </p>
+          <p class="class=">
+            If you're interested in my work or have any questions, feel free to contact me.
+          </p>
+          <nav class="nav nav-social">
+            <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank"
+              rel="noopener noreferrer" title="SoundCloud">
+              <div class="nav-social__icon nav-social__icon-soundcloud"></div>
+            </a>
+            <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank"
+              rel="noopener noreferrer" title="Twitter">
+              <div class="nav-social__icon nav-social__icon-twitter"></div>
+            </a>
+            <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank"
+              rel="noopener noreferrer" title="Instagram">
+              <div class="nav-social__icon nav-social__icon-ig"></div>
+            </a>
+            <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank"
+              rel="noopener noreferrer" title="LinkedIn">
+              <div class="nav-social__icon nav-social__icon-in"></div>
+            </a>
+          </nav>
+        </div>
+        <div class="cover-letter__photo"></div>
+      </article>
+    </section>
 
-      <section class="wow fadeInRight section experience" id="experience">
-        <h2 class="section__title">Experience</h2>
-          <div class="experience__item">
-            <span class="experience__date">2019 - Present</span>
-            <div class="experience__desc">
-              <h4 class="experience__desc__title">Freelancer Music Traslator</h4>
-              <a class="link link" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">Moravia</a> 
-              <span>Correctly working as a freelance music translator for RWS Moravia.</span>
-            </div>
-          </div>
-          <div class="experience__item">
-            <span class="experience__date">2012 - Present</span>
-            <div class="experience__desc">
-              <h4 class="experience__desc__title">Recording Technician</h4>
-              <a class="link link" href="https://www.instagram.com/delfondoestudio/" target="_blank" rel="noopener noreferrer">"Del Fondo" Studio</a>               
-              <span class="experience__desc">Recording, editing, mixing and mastering technician in "Del Fondo" studio, with a history of over 50+ bands and albums.</span>
-            </div>
-          </div>
-          <div class="experience__item">
-            <span class="experience__date">2011 - Present</span>
-            <div class="experience__desc">
-              <h4 class="experience__desc__title">Music Composer and Sound Designer</h4>
-              <h5 class="link link--nourl">Freelancer</h5>
-              <span class="experience__desc">Worked in over 20 redords, as musician and producer, recording technician and mixing/mastering technician, 
-                2+ games (one of them currently in development), as well as a freelance music composer for 10 years.
-                Curently composer of music and lyrics of "<a class="link" href="https://www.instagram.com/animaoficial/">Anima</a>", band from Rosario, Argentina.
-              </span>
-            </div>
-          </div>
-      </section>
+    <section class="wow fadeInRight section skills" id="skills">
+      <h2 class="section__title">Skills</h2>
+      <p class="desc">I work with a variety of instruments, musical softwares and sound design tools</p>
 
-      <section class="wow fadeInRight section examples" id="">
-          <h2 class="section__title">Examples</h2>
-          <iframe
-            class="desc"
-            width="100%"
-            height="500"
-            scrolling="no"
-            frameborder="no"
-            allow="autoplay"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/865961664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-          ></iframe>
-      </section>
+      <p><b><u>Composition and Production</u>:</b> Soundtracks, Adaptive Music, Animation Videos, Albums and Music
+        Production for bands.</p>
+      <p><b><u>Sound Design</u>:</b> Creating, recording, editing and processing of sound effects and foley.</p>
+      <p><b><u>Audio Hardware</u>:</b> Studio recording with Audio Interfaces/Consoles and Live PA in shows.</p>
+      <p><b><u>Audio Softwares</u>:</b> Pro Tools, Cubase, Ableton, Nuendo, Logic, FL Studio, Reaper.</p>
+      <p><b><u>Software Experience</u>:</b> Unity, Fmod, Sibelius, Musescore.</p>
+      <p><b><u>Additional Software Esperience</u>:</b> Adobe Photoshop, Microsoft Office Suite, VEGAS Pro.</p>
+    </section>
 
-      <section class="wow fadeInRight section contact" id="contact">
-        <h2 class="section__title">Contact Me</h2>
-        <p class="desc">
-          Feel free to cantact me at any time, and I'll do my best to reply as soon as possible.
-        </p>
-        Direct email: <a class="link " href="mailto:gabrielberbetoros@gmail.com">gabrielberbetoros@gmail.com</a>
-        <form class="contact__form" method="POST" action="https://formspree.io/xrglrqya">
-          <label for=""></label>
-          <input class="field" type="text" name="Name" placeholder="Name*" id="name"/>
-          <input class="field" type="email" name="_replyto" placeholder="Email*" id="email" />
-          <input type="hidden" name="_next" value="//site.io/thanks.html" />
-          <textarea class="field field--textarea" cols="30" rows="10" placeholder="Message*" id="message" name="message"></textarea>
-          <p class="fields-requirements">All the fields are required.</p>
-          <input class="btn" type="submit" value="Send"></input>
-        </form>
-      </section>
-    </main> 
+    <section class="wow fadeInRight section experience" id="experience">
+      <h2 class="section__title">Experience</h2>
+      <div class="experience__item">
+        <span class="experience__date">2019 - Present</span>
+        <div class="experience__desc">
+          <h4 class="experience__desc__title">Freelancer Music Traslator</h4>
+          <a class="link link" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank"
+            rel="noopener noreferrer">Moravia</a>
+          <span>Correctly working as a freelance music translator for RWS Moravia.</span>
+        </div>
+      </div>
+      <div class="experience__item">
+        <span class="experience__date">2012 - Present</span>
+        <div class="experience__desc">
+          <h4 class="experience__desc__title">Recording Technician</h4>
+          <a class="link link" href="https://www.instagram.com/delfondoestudio/" target="_blank"
+            rel="noopener noreferrer">"Del Fondo" Studio</a>
+          <span class="experience__desc">Recording, editing, mixing and mastering technician in "Del Fondo" studio, with
+            a history of over 50+ bands and albums.</span>
+        </div>
+      </div>
+      <div class="experience__item">
+        <span class="experience__date">2011 - Present</span>
+        <div class="experience__desc">
+          <h4 class="experience__desc__title">Music Composer and Sound Designer</h4>
+          <h5 class="link link--nourl">Freelancer</h5>
+          <span class="experience__desc">Worked in over 20 redords, as musician and producer, recording technician and
+            mixing/mastering technician,
+            2+ games (one of them currently in development), as well as a freelance music composer for 10 years.
+            Curently composer of music and lyrics of "<a class="link"
+              href="https://www.instagram.com/animaoficial/">Anima</a>", band from Rosario, Argentina.
+          </span>
+        </div>
+      </div>
+    </section>
 
-    <footer>
-      <section class="section footer__wrapper">
-          <h4 class="footer__name">Gabi 👽 Berbetoros | Composer | Sound Designer</h4>
-          <!-- <small class="footer__author"> Web made with love by 🦉 <a href="https://feralonsomaccari.github.io/my-portfolio/" target="_blank" rel="noopener">Fer Alonso Maccari</a>. </small> -->
-        <nav class="nav nav-social nav-social--footer">
-          <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer" title="SoundCloud"
-          ><div class="nav-social__icon nav-social__icon-soundcloud"></div
-          ></a>
-          <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer" title="Twitter"
-          ><div class="nav-social__icon nav-social__icon-twitter"></div
-            ></a>
-            <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank" rel="noopener noreferrer" title="Instagram"
-            ><div class="nav-social__icon nav-social__icon-ig"></div
-              ></a>
-          <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank" rel="noopener noreferrer" title="LinkedIn"
-          ><div class="nav-social__icon nav-social__icon-in"></div
-          ></a>
-        </nav>
-      </section>
-    </footer>
+    <section class="wow fadeInRight section examples" id="">
+      <h2 class="section__title">Examples</h2>
+      <div class="examples__wrapper examples__wrapper--game">
+        <iframe src="https://itch.io/embed/901778" height="167" width="552" frameborder="0"><a
+            href="https://pkalaizich.itch.io/swim-quest">Swim Quest by pkalaizich, lopezcarrara,
+            GabiBerbetoros</a></iframe>
+      </div>
+      <div class="examples__wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/p56aBJCmBT8" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+      <div class="examples__wrapper">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RwoCy8Ot3nU" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
 
-    <script src="js/particles.js-master/particles.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+      <iframe  width="100%" height="500" scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/865961664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+    </section>
+
+    <section class="wow fadeInRight section contact" id="contact">
+      <h2 class="section__title">Contact Me</h2>
+      <p class="desc">
+        Feel free to cantact me at any time, and I'll do my best to reply as soon as possible.
+      </p>
+      Direct email: <a class="link " href="mailto:gabrielberbetoros@gmail.com">gabrielberbetoros@gmail.com</a>
+      <form class="contact__form" method="POST" action="https://formspree.io/xrglrqya">
+        <label for=""></label>
+        <input class="field" type="text" name="Name" placeholder="Name*" id="name" />
+        <input class="field" type="email" name="_replyto" placeholder="Email*" id="email" />
+        <input type="hidden" name="_next" value="//site.io/thanks.html" />
+        <textarea class="field field--textarea" cols="30" rows="10" placeholder="Message*" id="message"
+          name="message"></textarea>
+        <p class="fields-requirements">All the fields are required.</p>
+        <input class="btn" type="submit" value="Send"></input>
+      </form>
+    </section>
+  </main>
+
+  <footer>
+    <section class="section footer__wrapper">
+      <h4 class="footer__name">Gabi 👽 Berbetoros | Composer | Sound Designer</h4>
+      <!-- <small class="footer__author"> Web made with love by 🦉 <a href="https://feralonsomaccari.github.io/my-portfolio/" target="_blank" rel="noopener">Fer Alonso Maccari</a>. </small> -->
+      <nav class="nav nav-social nav-social--footer">
+        <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank"
+          rel="noopener noreferrer" title="SoundCloud">
+          <div class="nav-social__icon nav-social__icon-soundcloud"></div>
+        </a>
+        <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer"
+          title="Twitter">
+          <div class="nav-social__icon nav-social__icon-twitter"></div>
+        </a>
+        <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank"
+          rel="noopener noreferrer" title="Instagram">
+          <div class="nav-social__icon nav-social__icon-ig"></div>
+        </a>
+        <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank"
+          rel="noopener noreferrer" title="LinkedIn">
+          <div class="nav-social__icon nav-social__icon-in"></div>
+        </a>
+      </nav>
+    </section>
+  </footer>
+
+  <script src="js/particles.js-master/particles.min.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
