Update anima spotify link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             mixing/mastering technician,
             2+ games (one of them currently in development), as well as a freelance music composer for 10 years.
             Curently composer of music and lyrics of "<a class="link"
-              href="https://www.instagram.com/animaoficial/">Anima</a>", band from Rosario, Argentina.
+              href="https://open.spotify.com/artist/4QtuwbIEuSzLjz8MP8osWt?si=kjourxlnQbCSOIyea_Be-g">Anima</a>", band from Rosario, Argentina.
           </span>
         </div>
       </div>
