--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <div class="particles" id="particles-js"></div>
     <section class="section header__wrapper">
-      <article class="wow fadeInLeft header__title">
+      <article class="header__title">
         <h1 class="title__name">Gabi <small class="title__icon"> 👽 </small> Berbetoros</h1>
 
         <h2 class="title__subtitle">Composer | Sound Designer</h2>
@@ -36,7 +36,7 @@
   </header>
 
   <main>
-    <section class="wow fadeInRight section cover-letter" id="about">
+    <section class="wow fadeInUp section cover-letter" id="about">
       <h2 class="section__title">HELLO!</h2>
       <article class="cover-letter__article">
         <div class="cover-letter__desc">
@@ -71,7 +71,7 @@
       </article>
     </section>
 
-    <section class="wow fadeInRight section skills" id="skills">
+    <section class="wow fadeInUp section skills" id="skills">
       <h2 class="section__title">Skills</h2>
       <p class="desc">I work with a variety of instruments, musical softwares and sound design tools</p>
 
@@ -84,7 +84,7 @@
       <p><b><u>Additional Software Esperience</u>:</b> Adobe Photoshop, Microsoft Office Suite, VEGAS Pro.</p>
     </section>
 
-    <section class="wow fadeInRight section experience" id="experience">
+    <section class="wow fadeInUp section experience" id="experience">
       <h2 class="section__title">Experience</h2>
       <div class="experience__item">
         <span class="experience__date">2019 - Present</span>
@@ -120,7 +120,7 @@
       </div>
     </section>
 
-    <section class="wow fadeInRight section examples" id="">
+    <section class="section examples" id="">
       <h2 class="section__title">Examples</h2>
       <div class="examples__wrapper examples__wrapper--game">
         <iframe src="https://itch.io/embed/901778" height="167" width="552" frameborder="0"><a
@@ -142,7 +142,7 @@
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/865961664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
     </section>
 
-    <section class="wow fadeInRight section contact" id="contact">
+    <section class="section contact" id="contact">
       <h2 class="section__title">Contact Me</h2>
       <p class="desc">
         Feel free to cantact me at any time, and I'll do my best to reply as soon as possible.
