--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" href="src/ico.png" />
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="stylesheet" href="styles/animate.css" />
-  <title>Portfolio | Gabi Berbetoros</title>
+  <title>Portfolio | Gabriel Berbetoros</title>
 </head>
 
 <body class="body-wrapper">
