--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
       <article class="cover-letter__article">
         <div class="cover-letter__desc">
           <p class="desc">
-            My name is Gabriel Berbetoros. I'm a Creative <b>Music Composer and sound designer</b> for video games and
-            visual effects, proficient in multiple
-            <b>audio production softwares</b>. Specialized in a wide variety of genres, from modern to orchestral music.
+            My name is Gabriel Berbetoros, music composer and sound designer for video games ans visual effects, proficient in multiple
+            audio production softwares. Specialized in a wide variety of genres, orchestral, electronic, syths and rock/metal music.
           </p>
           <p class="class=">
             If you're interested in my work or have any questions, feel free to contact me.
